--- a/src/styles/styleMoreInfo.css
+++ b/src/styles/styleMoreInfo.css
@@ -1,28 +1,31 @@
 .more-info {
-    margin: 0px;
-    padding: 0px 30px 0px 30px;
-    width: 100%;
-  }
-  .imbd {
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/2560px-IMDB_Logo_2016.svg.png");
-    height: 30px;
-    width: 60px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-bottom: 20px;
-  }
-  .subtitle {
-    color: rgba(250, 250, 250, 0.788);
-    font-size: larger;
-    margin-bottom: 5px;
-  }
-  .companies-container {
-    width: 10%;
-    margin-left: 20px;
-  }
-  section {
-    display: flex;
-    margin-left: 20px;
-    align-items: center;
-  }
+  margin: 0px;
+  padding: 0px 30px 0px 30px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.imbd {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/2560px-IMDB_Logo_2016.svg.png");
+  height: 30px;
+  width: 60px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+}
+.subtitle {
+  color: rgba(250, 250, 250, 0.788);
+  font-size: larger;
+  margin-bottom: 5px;
+}
+.companies-container {
+  width: 10%;
+  margin-left: 20px;
+}
+section {
+  display: flex;
+  margin-left: 20px;
+  align-items: center;
+}
