--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   height: 100vh;
+  overflow: auto;
 }
 *,
 *:before,
@@ -12,12 +13,13 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
+  overflow: auto;
 }
 
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   font-family: "Montserrat", sans-serif;
 }
