--- a/src/styles/styleMovieList.css
+++ b/src/styles/styleMovieList.css
@@ -69,6 +69,7 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+  justify-content: center;
 }
 .change-pages {
   color: white;
@@ -134,4 +135,8 @@ h3 {
   border-radius: 10px;
   height: 50px;
   width: 50px;
+}
+#cards{
+  display: flex;
+  justify-content: center;
 }
