--- a/src/styles/stylesFilters.css
+++ b/src/styles/stylesFilters.css
@@ -4,7 +4,9 @@
   align-items: center;
   cursor: pointer;
   font-size: 20px;
-  padding: 15px;
+  text-align: center;
+ 
+  width: 100%;
 }
 .filters {
   padding: 10px;
@@ -20,12 +22,13 @@
 ul {
   margin-top: 0px;
 }
-.genres-container {
+.genres-container-filter {
   display: flex;
   align-items: center;
   justify-content: left;
   text-align: left;
   padding: 5px;
+  
 }
 .genres-container-select {
   background-color: rgba(85, 78, 78, 0.856);
@@ -35,7 +38,8 @@ ul {
   padding: 5px;
 }
 
-.genres-name {
+.genres-names {
+  
   font-size: 20px;
   cursor: pointer;
   margin-top: 10px;
