--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   font-family: "Montserrat", sans-serif;
 }
