--- a/src/styles/styleMovieList.css
+++ b/src/styles/styleMovieList.css
@@ -23,6 +23,7 @@
   align-items: center;
   width: 300px;
   border: solid black 5px;
+  height: 641px
 }
 .overlay {
   width: 300px;
@@ -94,8 +95,9 @@
   display: flex;
   justify-content: center;
   color: wheat;
-  width: 200px;
-  height: 60px;
+  width: 100%;
+
+
 }
 .button-pagination {
   margin: 3px;
@@ -122,6 +124,8 @@ h3 {
   margin: 5px;
   cursor: pointer;
   border-radius: 10px;
+  justify-content: center;
+  
 }
 .number-select {
   display: flex;
@@ -135,8 +139,10 @@ h3 {
   border-radius: 10px;
   height: 50px;
   width: 50px;
+  justify-content: center;
 }
 #cards{
   display: flex;
   justify-content: center;
+  margin: 0;
 }
