--- a/src/styles/styleDetails.css
+++ b/src/styles/styleDetails.css
@@ -1,6 +1,8 @@
 .container-details {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: white;
   background-image: url("../componentes/images/movie.png");
   background-repeat: no-repeat;
@@ -8,9 +10,8 @@
   background-position: center;
   background-position-x: right;
   background-color: black;
-  justify-content: center;
-  align-items: center;
 }
+
 
 .card-movie {
   background-color: rgba(43, 40, 40, 0.699);
@@ -48,3 +49,18 @@
   width: 100%;
   height: 100%;
 }
+@media only screen and (max-width: 980px) {
+
+.container-details{
+  background-image: url("../componentes/images/movie.png");
+  background-repeat: no-repeat;
+  background-size: 210%;
+  background-position:center ;
+  background-position-x: right;
+  background-color: rgb(0, 0, 0);
+}
+
+
+}
+
+
