--- a/src/styles/styleInfoMovie.css
+++ b/src/styles/styleInfoMovie.css
@@ -12,10 +12,21 @@
   border: solid white 2px;
   background-color: white;
 }
+h1{
+  margin-top: 20px;
+}
 .genres-container {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.poster-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+
 }
 .genres {
   color: rgba(255, 255, 255, 0.623);
@@ -64,13 +75,18 @@ li {
 
 .faArrowRight {
   height: 40px;
-  cursor: pointer;
+
 }
 .next {
   margin: 30px;
   display: flex;
-  flex-direction: column;
+  cursor: pointer;
   color: white;
+}
+.next-disable{
+  color: rgba(160, 154, 154, 0.315);
+  display: flex;
+  cursor:default;
 }
 .hide {
   display: none;
@@ -78,13 +94,19 @@ li {
 
 @media only screen and (max-width: 980px) {
   .info-movie {
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 15px;
+    padding: 20px;
   }
   .text-info{
-    margin-top: 20px;
+    margin-top: 10px;
+    height: 100%;
+    
+  }
+  #root{
+    background-color: #212529;
   }
 }
