--- a/src/styles/styleInfoMovie.css
+++ b/src/styles/styleInfoMovie.css
@@ -97,7 +97,7 @@ li {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 15px;
+    margin: 0px;
     padding: 20px;
   }
   .text-info {
@@ -106,5 +106,12 @@ li {
   }
   #root {
     background-color: #212529;
+  }
+  .frame-contrainer{
+    display: flex;
+    flex-direction: column;
+  }
+  iframe{
+    width: 300px;
   }
 }
