--- a/src/styles/styleLogin.css
+++ b/src/styles/styleLogin.css
@@ -7,34 +7,35 @@
   display: flex;
   flex: 1;
   align-items: center;
-  background-color: #f8d388;
-  background-image: url("https://fondosmil.com/fondo/57395.jpg");
+
+  background: linear-gradient(to top, #1e1e1e, #7a63ff);
+
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: 100% 100%;
   height: 100vh;
+  color: white;
 }
 
 #title {
   margin-top: 30px;
-  color: #f8d388;
+  color: white;
   text-align: center;
   margin-bottom: 0px;
-  background-color: #4b0f0c;
+  background-color: #7a63ff;
 }
 
 .form {
-  background-color: #4b0f0c;
+  border: outset white 2px;
+  background-color: #7a63ff;
   align-items: center;
   padding: 10px;
-  color: #f8d388;
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  opacity: 0.9;
-  height: 400px;
+  height: 450px;
   width: 350px;
-  border: outset #f8d388 3px;
   border-radius: 9px;
 }
 .login {
@@ -51,15 +52,16 @@
   margin-top: 8px;
   font-size: 20px;
   font-weight: 300;
-  border: outset #f8d388 3px;
+  border: outset #7a63ff 3px;
   border-radius: 9px;
-  background-color: #f8d388;
+  background-color: white;
 }
 .labels {
   display: flex;
   align-items: flex-end;
   font-size: 20px;
   margin-top: 4px;
+  color: white;
 }
 .colums {
   display: flex;
@@ -68,9 +70,9 @@
   align-items: center;
 }
 button {
-  background-color: #4b0f0c;
-  color: #f8d388;
-  border: groove #f8d388 5px;
+  background-color: #7a63ff;
+  color: white;
+  border: groove white 3px;
   padding: 5px;
   font-size: 20px;
   border-radius: 5px;
@@ -78,7 +80,7 @@ button {
 }
 a {
   height: 100%;
-  color: #f8d388;
+  color: white;
 }
 .social {
   display: flex;
@@ -88,17 +90,14 @@ a {
 
 @media only screen and (max-width: 980px) {
   .form {
-    background-color: #4b0f0c;
     align-items: center;
     padding: 20px;
-    color: #f8d388;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     opacity: 0.9;
-    height: 700px;
-    width: 550px;
-    border: outset #f8d388 3px;
+    height: 450px;
+    width: 325px;
     border-radius: 9px;
   }
   .social {
@@ -106,23 +105,22 @@ a {
     width: 100%;
     justify-content: space-around;
     margin-bottom: 20px;
-    height: 40px;
+    height: 20px;
   }
   .icon {
-    height: 45px;
+    margin-top: 5px;
+    height: 37px;
   }
-  .button{
-    width: 100px;
-    height: 75px;
-    font-size:30px ;
-    
+  .button {
+    width: 80px;
+    height: 50px;
+    font-size: 20px;
   }
-  .labels{
-    font-size: 32px;
+  .labels {
+    font-size: 20px;
   }
-  .form-control{
-    height: 70px;
-    width: 330px;
-
+  .form-control {
+    height: 50px;
+    width: 280px;
   }
 }
