--- a/src/styles/styleMovieList.css
+++ b/src/styles/styleMovieList.css
@@ -8,26 +8,27 @@
   margin-top: 30px;
 }
 .card{
-  width: 300px;
-  height: 661px;
+  width: 303px;
+  height: 670px;
   margin: 0px;
-  background-color: #131111;
-  margin: 20px;
+  border: none;
+  margin:17px;
   text-decoration: none;
   text-align: center;
+  background-color: #161616;
 }
 .cart {
   display: flex;
   flex-direction: column;
-  background-color: #383736;
+  background-color: none;
   align-items: center;
   width: 300px;
-  border: solid black 5px;
-  height: 641px
+  border: none;
+  height: 670px
 }
 .overlay {
   width: 300px;
-  height: 641px;
+  height: 670px;
   margin: 0px;
   padding: 0px;
   position: absolute;
@@ -47,12 +48,13 @@
   padding: 0px;
   margin: 0px;
   width: 100%;
-  height: 451px;
+  height: 481px;
 }
 .text-container {
   text-decoration: none;
-  height: 200px;
-  border-top: solid black 5px;
+  background-color: #7a63ff;
+  height: 100%;
+  border-top: solid black 3px;
   color: rgba(255, 255, 255, 0.658);
   text-align: -webkit-match-parent;
   padding: 5px;
@@ -145,4 +147,56 @@ h3 {
   display: flex;
   justify-content: center;
   margin: 0;
+}
+@media only screen and (max-width: 980px) {
+  #cards{
+    display: flex;
+    justify-content:space-around
+  }
+ .card{
+  height: 320px;
+  width: 150px;
+  margin:0px 0px 20px 0px
+ }
+ .cart{
+  height: 320px;
+  width: 150px;
+ }
+ .overlay{
+  width: 150px;
+  height: 320px;
+ }
+ .card-img-top{
+  width: 150px;
+  height: 320px;
+  
+ }
+ .text-container{
+  display: none;
+ }
+ .number{
+  height: 30px;
+  width: 30px;
+  font-size: 20px;
+  margin: 2px;
+ }
+ .number-select {
+  height: 30px;
+  width: 30px;
+  font-size: 20px;
+  margin: 2px;
+ }
+ .button-pagination{
+  width: 25px;
+  height: 35px;
+  font-size: 20px;
+  text-align: center;
+  padding: 5px;
+
+ }
+ .pagination{
+  justify-content: center;
+  align-items: center;
+
+ }
 }
