--- a/src/styles/styleSearch.css
+++ b/src/styles/styleSearch.css
@@ -1,21 +1,22 @@
 .form-search {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  width: 220px;
+  width: 400px;
   border: none;
   height: 120px;
   padding: 15px;
-  align-items: flex-start;
+  align-items: center;
   background: none;
 }
 .search {
   border: solid white 0.5px;
+  height: 40px;
+  width: 180px;
+  text-align: center;
 }
 .button-serach {
-  width: 100%;
-  color: white;
+  width: 40px;
+  height: 40px;
+  color: #74d8ef;
   border: none;
-  margin-top: 8px;
-  background-color: rgb(68, 66, 66);
+  background-color: #7a63ff
 }
